--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,16 +1,44 @@
 @import url("https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap");
 
+#contactErrorMessage {
+  display: none;
+  font-size: 20px;
+  color: #fff;
+  font-family: var(--fontRoboto);
+  font-weight: 400;
+  background: #ff0000;
+  text-align: center;
+  width: 50%;
+  margin: 0px auto;
+  padding: 4px;
+  border-radius: 5px;
+}
+
+#contactSuccessMessage {  
+  display: none;
+  font-size: 20px;
+  color: #fff;
+  font-family: var(--fontRoboto);
+  font-weight: 400;
+  background: #00cd15;
+  text-align: center;
+  width: 50%;
+  margin: 0px auto;
+  padding: 4px;
+  border-radius: 5px;
+}
+
 body {
   background-color: var(--mainBodyColor);
 }
 
 .contact_main {
   padding-top: 140px;
+  margin-bottom: 85px;
 }
 
 .form-control1 {
   display: flex;
-
   gap: 36px;
   margin-bottom: 33px;
 }
@@ -37,7 +65,6 @@ body {
 
 .form-control2 {
   display: flex;
-
   gap: 36px;
 }
 
@@ -97,9 +124,10 @@ body {
   width: 100%;
   height: 75px;
   display: flex;
-
+  flex-direction: column;
   justify-content: center;
-  margin-top: 85px;
+  align-items: center;
+  margin-top: 20px;
 }
 
 .button {
@@ -109,9 +137,7 @@ body {
   background-color: #e16a00;
   width: 50%;
   height: 70px;
-
   border: none;
-
   color: #fff;
   text-align: center;
   font-family: "Crimson Text", serif;
@@ -119,6 +145,11 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.button:hover {
+  transition: all .3s;
+  transform: scale(1.1);
 }
 
 .container {
