--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -160,7 +160,7 @@ body {
   width: 90%;
 }
 
-@media screen and (max-width: 900px) and (min-width: 330px) {
+@media screen and (max-width: 900px) and (min-width: 320px) {
   .form-control1 {
     display: flex;
     flex-direction: column;
@@ -175,7 +175,6 @@ body {
     border: 1px solid #cecece;
     background: #fff;
     width: 100%;
-
     height: 40px;
   }
 
@@ -216,7 +215,6 @@ body {
     background: #fff;
     padding: 26px 0px 24px 38px;
     border-radius: 5px;
-
     width: 100%;
     height: 101px;
   }
@@ -238,7 +236,7 @@ body {
   .p-div p {
     color: #241400;
     font-family: var(--fontMons);
-    font-size: 50px;
+    font-size: 44px;
     font-weight: 900;
   }
 
@@ -251,116 +249,18 @@ body {
   }
 
   .button-div {
-    padding-top: 60px;
-  }
-
-  .container .p-div {
-    padding-left: 0px;
-  }
-}
-
-@media screen and (max-width: 330px) {
-  .form-control1 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-top: 29px;
-    padding: 0px 38px 0px 38px;
-  }
-
-  .form-control1 input {
-    border-radius: 5px;
-    border: 1px solid #cecece;
-    background: #fff;
     width: 100%;
-
-    height: 40px;
-  }
-
-  .form-control1 ::placeholder {
-    color: #241400;
-    font-family: "Crimson Text", serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-
-  .form-control2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0px 38px 0px 38px;
-  }
-
-  .form-control2 input {
-    border-radius: 5px;
-    border: 1px solid #cecece;
-    background: #fff;
-    width: 100%;
-    height: 40px;
-  }
-
-  .form-control2 ::placeholder {
-    color: #241400;
-    font-family: "Crimson Text", serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-
-  .form-control3 textarea {
-    border: 1px solid #cecece;
-    background: #fff;
-    padding: 26px 0px 24px 38px;
-    border-radius: 5px;
-
-    width: 100%;
-    height: 101px;
-  }
-
-  .form-control3 ::placeholder {
-    color: #241400;
-    font-family: "Crimson Text", serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-
-  .form-control3 {
-    padding: 0px 38px 0px 38px;
   }
 
   .container .p-div {
     padding-left: 0px;
   }
 
-  .p-div {
-    text-align: center;
-    padding-top: 41px;
+  #contactErrorMessage {
+width: 100%;
   }
 
-  .p-div p {
-    color: #241400;
-    font-family: var(--fontMons);
-    font-size: 35px;
-    font-weight: 900;
-  }
-
-  .button {
-    border-radius: 5px;
-    background: #e16a00;
+  #contactSuccessMessage {
     width: 100%;
-    height: 50px;
-    font-size: 25px;
-    font-family: "Crimson Text", serif;
-  }
-
-  .button-div {
-    padding-top: 45px;
-    padding: 0px 38px 0px 38px;
   }
 }
