--- a/src/css/about.css
+++ b/src/css/about.css
@@ -5,7 +5,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 100px 10px 0px;
   width: 85%;
   margin: 0px auto;
   gap: 8px;
@@ -34,8 +33,10 @@ main {
   }
 }
 .img-content {
+  width: 40%;
+  padding-top: 20px;
   &&img {
-    width: 50%;
+    width: 100%;
   }
 }
 @media screen and (max-width: 1200px) {
