--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -98,9 +98,12 @@ cursor: pointer;
 
 .slider-catagories {
   overflow-x: auto;
+  width: 100%;
   max-width: 500px;
   display: flex;
   justify-content: space-between;
+  align-items: start;
+  padding: 20px;
   && button {
     background-color: var(--mainBodyColor);
     border: none;
@@ -109,6 +112,7 @@ cursor: pointer;
     font-size: 13px;
     font-style: normal;
     font-weight: 400;
+    text-decoration: none;
     &&:hover {
       transition: all .3s;
       color: var(--mainColorOrange);
